--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 api.key=3070856697cde0dd9224dc1445904678
+spring.devtools.livereload.enabled=true
